data/route_table_raw.json
{
  "RouteTables": [
    {
      "Associations": [
        {
          "Main": true,
          "RouteTableAssociationId": "rtbassoc-6bb17a02",
          "RouteTableId": "rtb-d4c00bbd",
          "AssociationState": {
            "State": "associated"
          }
        }
      ],
      "PropagatingVgws": [],
      "RouteTableId": "rtb-d4c00bbd",
      "Routes": [
        {
          "DestinationCidrBlock": "172.31.0.0/16",
          "GatewayId": "local",
          "Origin": "CreateRouteTable",
          "State": "active"
        },
        {
          "DestinationCidrBlock": "0.0.0.0/0",
          "GatewayId": "igw-9cac57f5",
          "Origin": "CreateRoute",
          "State": "active"
        }
      ],
      "Tags": [],
      "VpcId": "vpc-66c8080f",
      "OwnerId": "837758803730"
    }
  ],
  "ResponseMetadata": {
    "RequestId": "c0125542-f10d-4df6-a420-91d37d70d87a",
    "HTTPStatusCode": 200,
    "HTTPHeaders": {
      "x-amzn-requestid": "c0125542-f10d-4df6-a420-91d37d70d87a",
      "cache-control": "no-cache, no-store",
      "strict-transport-security": "max-age=31536000; includeSubDomains",
      "content-type": "text/xml;charset=UTF-8",
      "content-length": "937",
      "date": "Fri, 06 Jun 2025 13:59:46 GMT",
      "server": "AmazonEC2"
    },
    "RetryAttempts": 0
  }
}
